fixes various small bugs and introduces better practices

--- a/picameleon/configs/stream_server_config.json
+++ b/picameleon/configs/stream_server_config.json
@@ -37,7 +37,7 @@
         "mode_config": {
           "prepend_size": true,
           "recording_options": {
-            "resize": ["640", "480"]
+            "resize": [640, 480]
           }
         }
       }
